Minor fixes for o3-form component (#1855)
* fix: fix displaying two show passowrd checkbox and add link styling

* docs: add WIP lalbel for components in o3-form

* fix: fix accessibility issues with input elements not being associated to labels

* fix: fix space issue between legend and items in fieldset component

* fix: add focus styles for radio and checkbox buttons

* feat: if input elements have no id generate random id. Fix issue with password id being same

* fix: fix focus not showing error on anchor links inside tip component

* feat: add error-summary preview to website

--- a/components/o3-form/src/css/components/form-field.css
+++ b/components/o3-form/src/css/components/form-field.css
@@ -8,6 +8,13 @@
 		margin: 0;
 		padding: 0;
 		border: 0;
+		legend {
+			margin-bottom: var(--o3-spacing-3xs);
+			.o3-form-input__description {
+				margin-top: var(--o3-spacing-5xs);
+				display: block;
+			}
+		}
 	}
 
 	.o3-form-field__label,
@@ -24,10 +31,6 @@
 			color: var(--o3-color-use-case-muted-text);
 			font-weight: var(--o3-font-weight-regular);
 		}
-	}
-
-	.o3-form-field__legend {
-		padding: 0 0 var(--o3-spacing-5xs) 0;
 	}
 
 	.o3-form-input__description {
